# GameEngine

./: CMakeLists.txt  README.MD
code/: main.cpp
code/GLFW/: GLFW.cpp  GLFW.hpp  Window.cpp  Window.hpp
code/engine/: Camera.cpp  Camera.hpp
code/render/: Program.cpp  Program.hpp  Texture.hpp  VAO.cpp  VAO.hpp  texture.cpp
res/shaders/: base.frag  base.vert  image.frag
